add jdk6 source code in project