@@ -1,4 +1,4 @@
-package com.yiban.javaBase.dev.JVM.gc;
+package com.yiban.jdk6.gc;
 
 /**
  * gc demo
@@ -52,32 +52,35 @@ public class GCDemo {
 
     /**
      * 测试对象在Eden区的分配
-     * VM参数：-vervose:gc -Xms20M -Xmx20M -Xmn10M -XX:PrintGCDetails -XX:SurvivorRatio=8
+     * VM参数：-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8
      * Eden:8m 2个survivor为1m
      */
     static void test2(){
-        byte[] alloc1, alloc2, alloc3, alloc4;
-        alloc1 = new byte[2 * _1M];
-        System.out.println("alloc1 " + printAddressOf(alloc1));
-        alloc2 = new byte[2 * _1M];
-        System.out.println("alloc2 " + printAddressOf(alloc2));
-        alloc3 = new byte[2 * _1M];
-        System.out.println("alloc3 " + printAddressOf(alloc3));
-        alloc4 = new byte[3 * _1M];
-        System.out.println("alloc4 " + printAddressOf(alloc4));
-    }
-
-    static String printAddressOf(Object object){
-        return Integer.toHexString(System.identityHashCode(object));
+        byte[] a1,a2,a3,a4;
+        a1 = new byte[2*_1M];
+        a2 = new byte[2*_1M];
+        a3 = new byte[2*_1M];
+        a4 = new byte[4*_1M];//minor gc
     }
 
     /**
-     * 设定阈值 超过阈值直接进入年老代
+     * 设定对象大小阈值 超过阈值直接进入年老代
      * VM参数：-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:PretenureSizeThreshold=3145728
-     * PretenureSizeThreshold在Paralle Scavenge中无效
      */
     static void test3(){
-        System.out.println("aa");
         byte[] a1 = new byte[4*_1M];
+    }
+
+    /**
+     * 设定存活次数阈值 超过阈值进入年老代
+     * VM参数：-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=1 -XX:+PrintTenuringDistribution
+     */
+    static void test4(){
+        byte[] a1,a2,a3;
+        a1 = new byte[_1M/4];
+        a2 = new byte[4*_1M];
+        a3 = new byte[4*_1M];
+        a3 = null;
+        a3 = new byte[4*_1M];
     }
 }
